stacks/whoami/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`your.domain.com`)
    middlewares:
    - name: chain-authelia
      namespace: default
    services:
    - name: whoami
      namespace: whoami
      port: 80
